[SIS-xxx] changing the setup for donation tracking